--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/github": "^3.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jest": "^26.0.1"
   },
   "devDependencies": {},
